# prim

./: Cargo.toml  README.md
src/: age.rs  github.rs  lib.rs  main.rs  pr.rs  repos.rs
src/github-graphql/: PrList.graphql
