[package]
name = "prim"
version = "0.1.0"
authors = ["Pete Otaqui <pete@otaqui.com>"]
edition = "2021"

[lib]
name = "prim"
path = "src/lib.rs"

[[bin]]
name = "prim"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.7", features = ["env", "derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
dirs = "1.0.4"
futures = "0.3.21"
humantime = "2.1.0"
chrono = { version = "0.4.19" }
reqwest = { version = "^0.11", features = ["json", "blocking"] }
graphql_client = { version = "0.10.0", features = ["reqwest-blocking"] }

[dev-dependencies]
assert_cmd = "1.0.2"
assert_fs = "1.0.0"
predicates = "1.0.6"
